test/corpus/let_statements.txt
==================
Let statements
==================

let five = 5;
let ten = 10;

---

(source_file
    (let_statement
        name: (identifier)
        value: (number))
    (let_statement
        name: (identifier)
        value: (number)))


====================
Let statements work without ending ;
====================

let five = 5
let ten = 10

---

(source_file
    (let_statement
        name: (identifier)
        value: (number))
    (let_statement
        name: (identifier)
        value: (number)))

=========
Let statements followed by expression
=========
let x = 5;
x + 10;

---
(source_file
    (let_statement
        name: (identifier)
        value: (number))
    (expression_statement
        (binary_expression
            left: (identifier)
            right: (number)))
    )
